<resources>
    <string name="app_name">Currency Convertor</string>
    <string name="something_went_error">Something went error.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="from_currency">From</string>
    <string name="to_currency">To</string>
    <string name="convert">Convert</string>
    <string name="amount">Amount</string>
    <string name="converted_amount">Converted Amount</string>
    <string name="details">Details</string>
    <string name="currency_converter_screen">Currency Converter</string>
    <string name="historical_rates_screen">Historical Rates</string>
    <string name="rate">Rate</string>
    <string name="historical_rate_format"><b>Historical rates</b> (%s, %s) during <b>3 days</b></string>
    <string name="conversion_rate_for_popular_currencies">Conversion rate for popular currencies (%s)</string>
    <string name="value">Value</string>

</resources>
