<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.fragments.currencyconverter.CurrencyConverterFragment">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/from_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/from_currency"
                app:layout_constraintEnd_toStartOf="@+id/btn_swap"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/from_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:freezesText="false"
                    android:inputType="none"
                    android:labelFor="@id/from_input_layout" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_swap"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_compare_arrows_24"
                android:tint="?colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/from_input_layout"
                app:layout_constraintTop_toTopOf="@+id/from_input_layout"
                app:layout_constraintEnd_toStartOf="@+id/to_input_layout"
                app:layout_constraintStart_toEndOf="@+id/from_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/to_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/to_currency"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_swap"
                app:layout_constraintTop_toTopOf="@+id/btn_swap"
                app:layout_constraintBottom_toBottomOf="@+id/btn_swap">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/to_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:freezesText="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/amount"
                app:helperText="Default amount = 1"
                app:layout_constraintEnd_toEndOf="@+id/from_input_layout"
                app:layout_constraintStart_toStartOf="@+id/from_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/from_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:hint="@string/converted_amount"
                app:layout_constraintEnd_toEndOf="@+id/to_input_layout"
                app:layout_constraintStart_toStartOf="@+id/to_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/to_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_converted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:enabled="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/details_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/details"
                android:textAllCaps="false"
                app:backgroundTint="@color/teal_700"
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/amount_text_layout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>